--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body onload="randomize()">
 
-<div id="top"><span class="slae"><a href="#">bae</a></span><span class="toptext">this is an interpretation of art for the analytical mind</span></div>
+<div id="top"><span class="slae"><a href="#">slae</a></span><span class="toptext">this is an interpretation of art for the analytical mind</span></div>
 
 <div id="img">
 	<div class="img">
