--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/data.js"></script>
-<script src="js/functions.js"></script>
+<script src="js/explanations.js"></script>
 </head>
 
 
