--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/data.js"></script>
-	<script src="js/explanations.js"></script>
+<!-- 	<script src="js/data.js"></script>
+	<script src="js/explanations.js"></script> -->
 </head>
+<script src="js/data.js"></script>
+	<script src="js/explanations.js"></script>
 <body onload="randomize()">
 	<div id="top"><span class="slae"><a href="#">slae</a></span><span class="toptext">this is an interpretation of art for the analytical mind</span></div>
 	<div id="img">
